# templates

./: .gitignore  .pre-commit-config.yaml  LICENSE  flake.nix
bash/: flake.nix
go/htmx/: flake.nix
go/htmx/cmd/: main.go
go/htmx/views/: index.html
godot/hello/: flake.nix
python/devshell/: flake.nix
python/django/: .pre-commit-config.yaml  flake.nix  pyproject.toml
python/django/hello/: manage.py
python/django/hello/hello/: settings.py  urls.py
python/fastapi/: flake.nix
python/typer/: .gitignore
python/typer/requirements/: requirements-dev.txt
reco/default/: flake.nix
reco/sdk/: flake.nix
rust/bevy/: .gitignore  Cargo.toml  clippy.toml  flake.nix
rust/clap/: .gitignore  Cargo.toml  Justfile  flake.nix
rust/clap/src/: main.rs
rust/clap/src/commands/: add.rs  remove.rs
rust/hello/: flake.nix
templates/bash-application/: flake.nix
templates/go/htmx/: go.mod
templates/python/typer/: flake.nix  pyproject.toml
templates/python/typer/hello/: main.py
templates/python/typer/requirements/: requirements-dev.txt  requirements.txt
