[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "typer-hello"
version = "0.1.0"
authors = [
    {name = "Murat Can Üste", email = "mcanueste@gmail.com"},
]
description = "Typer CLI Hello World"
requires-python = ">=3.9"
# keywords = ["cli", "typer"]
# readme = "README.rst"
# license = {text = "BSD-3-Clause"}
# classifiers = [
#     "Framework :: Django",
#     "Programming Language :: Python :: 3",
# ]
dynamic = ["dependencies"]

[project.scripts]
typer-hello = "main:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements/requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements/requirements-dev.txt"] }}

